user img size fixed, input with text-overflow ellipsis to prevent overflow

--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -211,7 +211,7 @@ input:focus {
 }
 
 .img-user-wrapper {
-    width: 120px;
+    min-width: 120px;
     height: 120px;
     background-color: var(--background-default-dark);
     border-radius: 50%;
