--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,9 @@
   textarea {
     border: unset;
     outline: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
